tests/snapshots/errors/index_assign_non_indexable.mc
// Error: index assign to non-array/vector type

let x = 42;
x[0] = 10;
